switching back to http because https is a headache and I will not shell out hundreds of dollars for an ssl certificate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dokasphotos.com",
+  "homepage": "http://dokasphotos.com",
   "name": "dokasphotos.com",
   "version": "0.1.0",
   "private": true,
